@startuml
'https://plantuml.com/class-diagram

class TodoList {
    main()
    start()
}

class TodoListController {
    ListView<ItemList>: listOfLists
    Button addListButton
    Button editListButton
    Button removeListButton
    TextField titleField
    Button saveListsButton
    Button loadListButton
    TextField saveListField
    TextField loadListField
    Button updateTitleButton
    ObservableList<ItemList>: list
    addListClicked()
    editListClicked()
    removeListClicked()
    saveListsClicked()
    loadListClicked()
    updateTitleClicked()
    addList()
    removeList()
    refresh()
    updateTitle()
}

class SingleListController {
    TextField pathField
    Button sortButton
    Button addButton
    TextField dateField
    TextField descriptionField
    CheckBox completeBox
    Button saveButton
    Button updateButton
    Button removeButton
    Button backButton
    ListView<Item>: itemDisplay
    ItemList itemList
    ObservableList<Item> sortedList
    backButtonClicked()
    addButtonClicked()
    removeButtonClicked()
    saveButtonClicked()
    updateButtonClicked()
    addToList()
    removeFromList()
    updateItem()
    initList()
    refresh()
    sortButtonClicked()
    sortItemList()
}

class Item {
    String description
    String date
    Boolean completion
    Item()
    getDescription()
    setDescription()
    getDate()
    setDate()
    isComplete()
    setCompletion()
    toString()
}

class ItemList {
    String title
    ObservableList<Item>: items
    ItemList()
    getTitle()
    setTitle()
    getItems()
    addItem()
    sortList()
}

class TodoListIO {
    saveList()
    saveAllLists()
    loadList()
    loadAllLists()
}

javafx.Application <|-- TodoList
TodoList - TodoListController
TodoListController - SingleListController
TodoListController -- ItemList
TodoListController -- TodoListIO
SingleListController --- ItemList
SingleListController - Item
SingleListController - TodoListIO
ItemList - Item

@enduml